Fixing tbody on mobile

--- a/sass/02-base/_04-typography.scss
+++ b/sass/02-base/_04-typography.scss
@@ -157,7 +157,7 @@ table {
 		th{
 			padding: .25rem;
 		}
-		@media (max-width: 480px){
+		@media (min-width: 480px){
 			+ tbody{
 				&:before{
 					content: '';
